--- a/xiaomimall/package.json
+++ b/xiaomimall/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mall",
+  "name": "mall123",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,9 +14,9 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "qrcode": "^1.4.4",
-    "swiper": "^5.3.6",
+    "swiper": "^5.4.5",
     "vue": "^2.6.10",
-    "vue-awesome-swiper": "^4.0.4",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
